GrammarDemo/antlr4-runtime/SimpleLanguageParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Poc and Personal\GrammarDemo\SimpleLanguage.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class SimpleLanguageParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, Def=2, End=3, Return=4, OR=5, AND=6, EQ=7, NEQ=8, GT=9, LT=10, 
		GTEQ=11, LTEQ=12, PLUS=13, MINUS=14, MULT=15, DIV=16, MOD=17, POW=18, 
		NOT=19, SCOL=20, ASSIGN=21, OPAR=22, CPAR=23, OBRACE=24, CBRACE=25, TRUE=26, 
		FALSE=27, NIL=28, IF=29, ELSE=30, WHILE=31, LOG=32, ID=33, INT=34, FLOAT=35, 
		STRING=36, COMMENT=37, SPACE=38, OTHER=39;
	public const int
		RULE_parse = 0, RULE_block = 1, RULE_functionCall = 2, RULE_functionDecl = 3, 
		RULE_idList = 4, RULE_stat = 5, RULE_assignment = 6, RULE_if_stat = 7, 
		RULE_condition_block = 8, RULE_stat_block = 9, RULE_while_stat = 10, RULE_log = 11, 
		RULE_expr = 12, RULE_atom = 13;
	public static readonly string[] ruleNames = {
		"parse", "block", "functionCall", "functionDecl", "idList", "stat", "assignment", 
		"if_stat", "condition_block", "stat_block", "while_stat", "log", "expr", 
		"atom"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", "'def'", "'end'", "'return'", "'||'", "'&&'", "'=='", "'!='", 
		"'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", 
		"'!'", "';'", "'='", "'('", "')'", "'{'", "'}'", "'true'", "'false'", 
		"'nil'", "'if'", "'else'", "'while'", "'log'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "Def", "End", "Return", "OR", "AND", "EQ", "NEQ", "GT", "LT", 
		"GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", "POW", "NOT", "SCOL", 
		"ASSIGN", "OPAR", "CPAR", "OBRACE", "CBRACE", "TRUE", "FALSE", "NIL", 
		"IF", "ELSE", "WHILE", "LOG", "ID", "INT", "FLOAT", "STRING", "COMMENT", 
		"SPACE", "OTHER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SimpleLanguage.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SimpleLanguageParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SimpleLanguageParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SimpleLanguageParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ParseContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(SimpleLanguageParser.Eof, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parse; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterParse(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitParse(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParseContext parse() {
		ParseContext _localctx = new ParseContext(Context, State);
		EnterRule(_localctx, 0, RULE_parse);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28; block();
			State = 29; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public FunctionDeclContext[] functionDecl() {
			return GetRuleContexts<FunctionDeclContext>();
		}
		public FunctionDeclContext functionDecl(int i) {
			return GetRuleContext<FunctionDeclContext>(i);
		}
		public ITerminalNode Return() { return GetToken(SimpleLanguageParser.Return, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode SCOL() { return GetToken(SimpleLanguageParser.SCOL, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 35;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Def) | (1L << IF) | (1L << WHILE) | (1L << LOG) | (1L << ID) | (1L << OTHER))) != 0)) {
				{
				State = 33;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case IF:
				case WHILE:
				case LOG:
				case ID:
				case OTHER:
					{
					State = 31; stat();
					}
					break;
				case Def:
					{
					State = 32; functionDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 37;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 42;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Return) {
				{
				State = 38; Match(Return);
				State = 39; expr(0);
				State = 40; Match(SCOL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionCallContext : ParserRuleContext {
		public FunctionCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionCall; } }
	 
		public FunctionCallContext() { }
		public virtual void CopyFrom(FunctionCallContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LogFunctionCallContext : FunctionCallContext {
		public LogContext log() {
			return GetRuleContext<LogContext>(0);
		}
		public ITerminalNode OPAR() { return GetToken(SimpleLanguageParser.OPAR, 0); }
		public ITerminalNode CPAR() { return GetToken(SimpleLanguageParser.CPAR, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public LogFunctionCallContext(FunctionCallContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterLogFunctionCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitLogFunctionCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogFunctionCall(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IdentifierFunctionCallContext : FunctionCallContext {
		public ITerminalNode ID() { return GetToken(SimpleLanguageParser.ID, 0); }
		public ITerminalNode OPAR() { return GetToken(SimpleLanguageParser.OPAR, 0); }
		public ITerminalNode CPAR() { return GetToken(SimpleLanguageParser.CPAR, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public IdentifierFunctionCallContext(FunctionCallContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterIdentifierFunctionCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitIdentifierFunctionCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifierFunctionCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionCallContext functionCall() {
		FunctionCallContext _localctx = new FunctionCallContext(Context, State);
		EnterRule(_localctx, 4, RULE_functionCall);
		int _la;
		try {
			State = 57;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ID:
				_localctx = new IdentifierFunctionCallContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 44; Match(ID);
				State = 45; Match(OPAR);
				State = 47;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << NOT) | (1L << OPAR) | (1L << TRUE) | (1L << FALSE) | (1L << NIL) | (1L << ID) | (1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) {
					{
					State = 46; expr(0);
					}
				}

				State = 49; Match(CPAR);
				}
				break;
			case LOG:
				_localctx = new LogFunctionCallContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 50; log();
				State = 51; Match(OPAR);
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << NOT) | (1L << OPAR) | (1L << TRUE) | (1L << FALSE) | (1L << NIL) | (1L << ID) | (1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) {
					{
					State = 52; expr(0);
					}
				}

				State = 55; Match(CPAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclContext : ParserRuleContext {
		public ITerminalNode Def() { return GetToken(SimpleLanguageParser.Def, 0); }
		public ITerminalNode ID() { return GetToken(SimpleLanguageParser.ID, 0); }
		public ITerminalNode OPAR() { return GetToken(SimpleLanguageParser.OPAR, 0); }
		public ITerminalNode CPAR() { return GetToken(SimpleLanguageParser.CPAR, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode End() { return GetToken(SimpleLanguageParser.End, 0); }
		public IdListContext idList() {
			return GetRuleContext<IdListContext>(0);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterFunctionDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitFunctionDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclContext functionDecl() {
		FunctionDeclContext _localctx = new FunctionDeclContext(Context, State);
		EnterRule(_localctx, 6, RULE_functionDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59; Match(Def);
			State = 60; Match(ID);
			State = 61; Match(OPAR);
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 62; idList();
				}
			}

			State = 65; Match(CPAR);
			State = 66; block();
			State = 67; Match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdListContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(SimpleLanguageParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(SimpleLanguageParser.ID, i);
		}
		public IdListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_idList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterIdList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitIdList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdListContext idList() {
		IdListContext _localctx = new IdListContext(Context, State);
		EnterRule(_localctx, 8, RULE_idList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; Match(ID);
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 70; Match(T__0);
				State = 71; Match(ID);
				}
				}
				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public IToken _OTHER;
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public If_statContext if_stat() {
			return GetRuleContext<If_statContext>(0);
		}
		public While_statContext while_stat() {
			return GetRuleContext<While_statContext>(0);
		}
		public LogContext log() {
			return GetRuleContext<LogContext>(0);
		}
		public ITerminalNode OTHER() { return GetToken(SimpleLanguageParser.OTHER, 0); }
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterStat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitStat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 10, RULE_stat);
		try {
			State = 83;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 77; assignment();
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 2);
				{
				State = 78; if_stat();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 79; while_stat();
				}
				break;
			case LOG:
				EnterOuterAlt(_localctx, 4);
				{
				State = 80; log();
				}
				break;
			case OTHER:
				EnterOuterAlt(_localctx, 5);
				{
				State = 81; _localctx._OTHER = Match(OTHER);
				Console.WriteLine("unknown char: " + (_localctx._OTHER!=null?_localctx._OTHER.Text:null));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(SimpleLanguageParser.ID, 0); }
		public ITerminalNode ASSIGN() { return GetToken(SimpleLanguageParser.ASSIGN, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode SCOL() { return GetToken(SimpleLanguageParser.SCOL, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 12, RULE_assignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(ID);
			State = 86; Match(ASSIGN);
			State = 87; expr(0);
			State = 88; Match(SCOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_statContext : ParserRuleContext {
		public ITerminalNode[] IF() { return GetTokens(SimpleLanguageParser.IF); }
		public ITerminalNode IF(int i) {
			return GetToken(SimpleLanguageParser.IF, i);
		}
		public Condition_blockContext[] condition_block() {
			return GetRuleContexts<Condition_blockContext>();
		}
		public Condition_blockContext condition_block(int i) {
			return GetRuleContext<Condition_blockContext>(i);
		}
		public ITerminalNode[] ELSE() { return GetTokens(SimpleLanguageParser.ELSE); }
		public ITerminalNode ELSE(int i) {
			return GetToken(SimpleLanguageParser.ELSE, i);
		}
		public Stat_blockContext stat_block() {
			return GetRuleContext<Stat_blockContext>(0);
		}
		public If_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterIf_stat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitIf_stat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_stat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_statContext if_stat() {
		If_statContext _localctx = new If_statContext(Context, State);
		EnterRule(_localctx, 14, RULE_if_stat);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; Match(IF);
			State = 91; condition_block();
			State = 97;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 92; Match(ELSE);
					State = 93; Match(IF);
					State = 94; condition_block();
					}
					} 
				}
				State = 99;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			}
			State = 102;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				{
				State = 100; Match(ELSE);
				State = 101; stat_block();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Condition_blockContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public Stat_blockContext stat_block() {
			return GetRuleContext<Stat_blockContext>(0);
		}
		public Condition_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_condition_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterCondition_block(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitCondition_block(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCondition_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Condition_blockContext condition_block() {
		Condition_blockContext _localctx = new Condition_blockContext(Context, State);
		EnterRule(_localctx, 16, RULE_condition_block);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104; expr(0);
			State = 105; stat_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stat_blockContext : ParserRuleContext {
		public ITerminalNode OBRACE() { return GetToken(SimpleLanguageParser.OBRACE, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode CBRACE() { return GetToken(SimpleLanguageParser.CBRACE, 0); }
		public StatContext stat() {
			return GetRuleContext<StatContext>(0);
		}
		public Stat_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterStat_block(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitStat_block(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Stat_blockContext stat_block() {
		Stat_blockContext _localctx = new Stat_blockContext(Context, State);
		EnterRule(_localctx, 18, RULE_stat_block);
		try {
			State = 112;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case OBRACE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107; Match(OBRACE);
				State = 108; block();
				State = 109; Match(CBRACE);
				}
				break;
			case IF:
			case WHILE:
			case LOG:
			case ID:
			case OTHER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 111; stat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class While_statContext : ParserRuleContext {
		public ITerminalNode WHILE() { return GetToken(SimpleLanguageParser.WHILE, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public Stat_blockContext stat_block() {
			return GetRuleContext<Stat_blockContext>(0);
		}
		public While_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_while_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.EnterWhile_stat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleLanguageListener typedListener = listener as ISimpleLanguageListener;
			if (typedListener != null) typedListener.ExitWhile_stat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleLanguageVisitor<TResult> typedVisitor = visitor as ISimpleLanguageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhile_stat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public While_statContext while_stat() {
		While_statContext _localctx = new While_statContext(Context, State);
		EnterRule(_localctx, 20, RULE_while_stat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(WHILE);
			State = 115; expr(0);
			State = 116; stat_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
